--- a/Client/Pages/TransactionsOverview.razor.css
+++ b/Client/Pages/TransactionsOverview.razor.css
@@ -118,7 +118,7 @@
     outline: inherit;
 }
 
-#transactions {
+.transactions {
     display: flex;
     flex-direction: column;
     row-gap: 2vh;
