--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -105,7 +105,7 @@ else
             <div class="searchWrapper">
                 <div class="search__container">
                     <img src="../css/images/search btn.svg" />
-                    <input class="searchInput" type="text" value="@searchQuery" @oninput="UpdateSearchQuery" @onkeyup="HandleKeyUp" placeholder="חפשו קטגוריה או תת קטגוריה..." />
+                    <input class="searchInput" type="text" value="@searchQuery" @oninput="UpdateSearchQuery" @onkeyup="HandleKeyUp" placeholder="חפשו קטגוריה ..." />
 
                 </div>
             </div>
