--- a/Client/Components/CategoryComponent.razor
+++ b/Client/Components/CategoryComponent.razor
@@ -36,7 +36,7 @@
             }
         }
 
-        <div class="closedAndOpenMenu" @onfocusout="@(()=>isOpetionsBtnClicked=false)">
+        <div class="closedAndOpenMenu">
             <button class="options" @onclick="OpetionsBtnClicked" ><img src="../css/images/option menu.svg" /></button>
             @if (isOpetionsBtnClicked)
             {
