--- a/Client/Components/CategoryComponent.razor
+++ b/Client/Components/CategoryComponent.razor
@@ -7,6 +7,7 @@
 
 @if (deleteBtnClicked)
 {
+    isOpetionsBtnClicked = false;
     <GeneralPopUpComponent popupTypeTitle="מחיקת קטגוריה" middleText="@popupBodyText" name="@Category.categroyTitle" action="מחיקה" makeAction=@deleteCategory closePopUp="closeDeletePopUp"></GeneralPopUpComponent>
 }
 <div>
@@ -15,6 +16,7 @@
         {
 
             popupTitle = "עריכת קטגוריה";
+            isOpetionsBtnClicked = false;
             <EditCategoryComponent categoryToEdit="@Category" isCategoryOverlayOpen="showEditCategory" popupTitle="@popupTitle" closeOverlay="closeEditOverlay" isEmojiExsist=true></EditCategoryComponent>
         }
     </div>
@@ -40,6 +42,7 @@
             <button class="options" @onclick="OpetionsBtnClicked" ><img src="../css/images/option menu.svg" /></button>
             @if (isOpetionsBtnClicked)
             {
+                
                 <OptionsMenuComponent editBtnClicked="@showEditCategory" deleteBtnClicked="@deleteCategoryBtnClciked" closeOverlay="closeDeleteOverlay"></OptionsMenuComponent>
             }
         </div>
@@ -755,8 +758,8 @@
     public void showEditCategory()
     {
         editBtnClicked = !editBtnClicked;
-        deleteBtnClicked = false;
         isOpetionsBtnClicked = false;
+        deleteBtnClicked = false;
         closeOverlay.InvokeAsync(true);
         OpetionsBtnClicked();
     }
@@ -770,6 +773,7 @@
     public void deleteCategoryBtnClciked()
     {
         deleteBtnClicked = !deleteBtnClicked;
+        isOpetionsBtnClicked = false;
         editBtnClicked = false;
         isOpetionsBtnClicked = false;
         OpetionsBtnClicked();
