--- a/Client/Components/SubCategoryComponent.razor
+++ b/Client/Components/SubCategoryComponent.razor
@@ -8,12 +8,13 @@
 
 @if (deleteBtnClicked)
 {
+    isOptBtnClicked = false;
     <GeneralPopUpComponent popupTypeTitle="מחיקת תת קטגוריה" middleText="@popupBodyText" action="מחיקה" makeAction="deleteSubCat" closePopUp="deleteSubCatPopUp"></GeneralPopUpComponent>
 }
 
 
 
-<div class="budget-card" style="background-color:@subCatColor;border:1px solid @catOutlineColor" @onfocusout="@(()=>isOptBtnClicked=false)">
+<div class="budget-card" style="background-color:@subCatColor;border:1px solid @catOutlineColor">
     <div class="optionsMenu">
         @if (isOptBtnClicked)
         {
@@ -82,6 +83,7 @@
 
 @if (editSubCatBtnClicked)
 {
+    isOptBtnClicked = false;
     <div class="overlay">
         <div class="outerSubCatOverlay">
 
@@ -119,7 +121,7 @@
 
                     <label class="titleName" for="description">מה התקציב החודשי שלך עבור "@subCatToEdit.subCategoryTitle"?</label>
                     <div class="outerBudget">
-                        <input class="budgetBox" type="number" id="description" placeholder="0" @bind="subCatToEdit.monthlyPlannedBudget" @onfocusout="calculateBudgetChange" />
+                        <input class="budgetBox" type="number" id="description" placeholder="0" @bind="subCatToEdit.monthlyPlannedBudget"/>
                         <span class="currency-symbol">₪</span>
                         <br />
                         @if (ogBudget < 0)
@@ -393,6 +395,7 @@
     public async Task getUserCategories()
     {
         //editSubCatBtnClicked = true;
+        
         subCatToEdit.categroyTitle = categoryTitle;
         subCatToEdit.monthlyPlannedBudget = budget;
         subCatToEdit.subCategoryTitle = subCategoryTitle;
@@ -451,6 +454,7 @@
             }
         }
         editSubCatBtnClicked = !editSubCatBtnClicked;
+
         toggleOptionsMenu();
     }
 
@@ -494,9 +498,10 @@
 
     public void deleteSubCatPopUp()
     {
-        deleteBtnClicked = !deleteBtnClicked;
+        deleteBtnClicked = !deleteBtnClicked;       
         popupBodyText = "תת הקטגוריה '" + subCategoryTitle + "' עומדת להמחק";
         toggleOptionsMenu();
+        isOptBtnClicked = false;
     }
     public async Task deleteSubCat()
     {
